# projektwoche

./: .dockerignore  .gitignore  ABOUT.md  AGENTS.md  Cargo.toml  README.md  TODO.md  package.json  projects.json  projects.schema.json  turbo.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: codeql.yml  rust-ci-cd.yml
apps/projekte/: astro.config.mjs  microfrontends.json  next.config.ts  package.json  postcss.config.js  tsconfig.json  turbo.json
apps/projekte-alt/: README.md  next.config.ts  package.json
apps/projekte-svelte/: package.json  svelte.config.js  vite.config.ts
apps/projekte-svelte/src/: app.css
apps/setup-cli/: package.json  tsconfig.json
apps/web/: .npmrc  eslint.config.js  microfrontends.json  next.config.ts  package.json  tsconfig.json  turbo.json
apps/web/src/: env.js  instrumentation-client.ts  middleware.ts
rust/projektwoche/: Cargo.toml
rust/projektwoche-setup/: Cargo.toml  README.md
rust/projektwoche-setup/examples/: logger_demo.rs
rust/projektwoche-setup/src/: config.rs  lib.rs  logger.rs  main.rs
rust/projektwoche-setup/src/bundles/: mod.rs  projektwoche.rs
rust/projektwoche-setup/src/config/: interactive.rs  machine.rs  mod.rs
rust/projektwoche-setup/src/manager/: instructions.rs  mod.rs
rust/projektwoche/src/: logger.rs  main.rs
rust/ratatui-test-json/: Cargo.toml
scripts/: check_keywords.sh  check_keywords.ts  setup-tests.ts
scripts/setup-tests/: builder.ts  projektwoche.ts
tests/: Dockerfile.macos  Dockerfile.ubuntu  Dockerfile.windows  run-docker-tests.sh
(+50 files in other folders)
