[package]
name = "projektwoche-setup"
version = "0.1.0"
authors = ["Jack Ruder <jack@djl.foundation>"]
edition = "2024"
description = "A fast and efficient CLI tool for setting up development environments using customizable software bundles."
readme = "README.md"
homepage = "https://prowo.hackclub-stade.de/setup"
repository = "https://github.com/DJL-Foundation/projektwoche/tree/main/rust/projektwoche-setup"
license = "Apache-2.0"
keywords = ["setup", "projektwoche", "tool", "command-line", "djl-foundation"]
categories = ["command-line-utilities"]
publish = true
resolver = "2"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
confy = "1.0.0"
clap = { version = "4.5.42", features = ["derive"] }
dirs = "6.0.0"
os_info = "3.12.0"
regex = "1.10.0"